--- a/css/main.css
+++ b/css/main.css
@@ -683,6 +683,12 @@ color:#ED6A4E;
     
 }
 
+@media(max-width:32rem){
+    .formular__input{
+       padding:2rem;
+    }
+}
+
 .formular__input-left{
     display:block;
     padding:2rem;
@@ -727,6 +733,13 @@ color:#ED6A4E;
     
 }
 
+@media(max-width:32rem){
+    .form__phone{
+        margin-left:-1.5rem;
+        
+    }
+}
+
 input {
     appearance:none;
     -webkit-appearance:none;
@@ -739,6 +752,15 @@ input {
     outline:none;
     margin-left:auto;
     margin-right:auto;
+
+    
+}
+
+@media(max-width:32rem){
+    input{
+        margin-left:0.5rem;
+        width:13rem;
+    }
 }
 
 input:focus[type=email]{
@@ -759,6 +781,13 @@ textarea{
     font-size:1rem;
 }
 
+@media(max-width:32rem){
+    textarea{
+        margin-left:0.5rem;
+        width:15rem;
+    }
+}
+
 textarea:focus{
     background-color:rgb(228, 215, 215);
     border:1px solid rgb(228, 215, 215);
@@ -775,6 +804,13 @@ select{
     padding-left:2rem;
     outline:none;
     background-color:white;
+}
+
+@media(max-width:32rem){
+    select{
+        margin-left:0.5rem;
+        width:13rem;
+    }
 }
 
 select:focus{
