--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,12 @@
 * {box-sizing:border-box;}
 html {font-size:1em;}
 
-body{margin:0;padding:0;}
+body{
+    margin:0;
+    padding:0;
+    overflow-x:hidden;
+    overflow-y:scroll;
+}
 
 ::selection{
     color:white;
@@ -531,6 +536,7 @@ padding-left:calc(50% - 8rem);
     background-image:url(../images/background.jpg);
     background-size:cover;
     background-repeat:no-repeat;
+   
 }
 
 .skills__items {
@@ -550,6 +556,13 @@ padding-left:calc(50% - 8rem);
     padding:2rem 2rem 2.5rem 2rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
     
+    
+}
+
+@media(max-width:32rem){
+    .skills__item{
+        flex: 0 0 17rem;
+    }
 }
 
 .skills__items-icon{
@@ -735,7 +748,7 @@ color:#ED6A4E;
 
 @media(max-width:32rem){
     .form__phone{
-        margin-left:-1.5rem;
+        margin-left:-2.5rem;
         
     }
 }
